--- a/Unit09/scss/_medium.scss
+++ b/Unit09/scss/_medium.scss
@@ -75,10 +75,4 @@ header h2 {
 
 }
 
-#planVisit div:nth-child(2), #planVisit div:nth-child(4) {
-  // margin-right: 1%;
-}
 
-.tile{
-  background-size: unset;
-}
